--- a/styles/twosides.css
+++ b/styles/twosides.css
@@ -17,7 +17,7 @@ h1 {
     padding-left: 40px;
 }
 h2 {
-    text-align: center;
+    text-align: left;
     margin: 0;
     padding-top: 130px;
     padding-bottom: 20px;
@@ -25,35 +25,43 @@ h2 {
 section > p { text-align: center;}
 #cougar {
     background: #B26219;
-    padding-bottom: 50px;
 }
 #lion {
     background: #FFD5AE;
     color: #000;
-    padding-bottom: 50px;
 }
 #tiger {
     background: #FFBD82;
     color: #000;
-    padding-bottom: 50px;
 }
 img {
     display: block;
     margin: auto;
 }
 article {
-    background: #fff;
     width: 50%;
     color: #000;
-    padding: 20px 40px;
+    padding-top: 135px;
+    padding-right: 20px;
     -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
           box-sizing: border-box;
-    margin: auto;
+    float: right;
 }
+section {
+    float: left;
+    width: 100%;
+}
+div {
+    float: left;
+    width: 45%;
+    padding: 30px;
+}
+
 footer {
     text-align: center;
     padding: 20px 200px;
+    clear: both;
 }
 
 nav {
